--- a/Theater, Date & Time Selection Page.html
+++ b/Theater, Date & Time Selection Page.html
@@ -1,1 +1,182 @@
-
+<html> 
+    <head> 
+        <title>Shows</title> 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+rel="stylesheet"> 
+        <script 
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
+        <style> 
+            body { 
+                background-color: rgb(17, 17, 17); 
+                font-family: 'Playfair'; 
+                color: white; 
+            } 
+            nav a { 
+                text-decoration: none; 
+            } 
+            nav a.home:hover { 
+                background-color: #8a1313; 
+                border-radius: 5px; 
+            } 
+            .navbar-body { 
+                background: linear-gradient(315deg, black, rgb(154, 9, 9));                      
+            } 
+             
+            .date-container { 
+                background-color: #222; 
+                border-radius: 8px; 
+                display: flex; 
+                justify-content: center;    
+                gap: 20px; 
+                padding: 15px;     
+                box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1); 
+            } 
+            .date-box { 
+                background-color: #444; 
+                border-radius: 5px; 
+                padding: 10px; 
+                text-align: center; 
+                color: white; 
+                width: 50px; 
+                cursor: pointer; 
+            } 
+            .selected { 
+                background-color: #8a1313; 
+            } 
+            .theater-container { 
+                background-color: #222; 
+                margin: 10px; 
+                padding: 15px; 
+                border-radius: 8px; 
+                box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1); 
+                color:white; 
+                font-size: 20px; 
+            } 
+            .showtime-btn { 
+                padding: 10px 15px; 
+                border-radius: 5px; 
+                margin: 10px; 
+                border-width: 2px; 
+                background-color: #760e0e; 
+                color: #cecece; 
+                font-weight: bold; 
+                border-style:solid; 
+                border-color: #951212; 
+            } 
+        </style> 
+    </head> 
+    <body> 
+        <nav class="navbar navbar-expand-lg navbar-body"> 
+            <div class="container"> 
+                <a class="navbar-brand text-white d-flex align-items-center" href="#"> 
+                    <img src="logo.png" alt="Logo" width="40" height="30" class="me-3"> 
+                    <span class="align-middle">CineGo</span> 
+                </a>  
+                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" 
+aria-label="Toggle navigation"> 
+                    <span class="navbar-toggler-icon"></span> 
+                </button> 
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> 
+                    <div class="navbar-nav ms-auto"> 
+                        <a class="nav-link active home text-white ms-auto" href="homepage.html">Home</a> 
+                        <div class="dropdown"> 
+                            <a href="#" class="nav-link dropdown-toggle d-flex align-items-center" 
+id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+                                <img 
+src="https://www.vhv.rs/dpng/d/436-4363443_view-user-icon-png-font-awesome-user-circle.png" 
+alt="Profile" width="30" height="30" class="rounded-circle ms-4"> 
+                            </a> 
+                            <ul class="dropdown-menu dropdown-menu-end" 
+aria-labelledby="profileDropdown"> 
+                                <li><a class="dropdown-item" href="#">Edit Profile</a></li> 
+                                <li><a class="dropdown-item" href="#">Booking History</a></li> 
+                                <li><hr class="dropdown-divider"></li> 
+                                <li><a class="dropdown-item text-danger" href="login.html">Log Out</a></li> 
+                            </ul> 
+                        </div> 
+         
+                    </div> 
+                </div> 
+            </div> 
+        </nav> 
+        <div class="container mt-3"> 
+            <div class="date-container"> 
+                <div class="date-box selected" data-date="30">30<br>Sun</div> 
+                <div class="date-box" data-date="31">31<br>Mon</div> 
+                <div class="date-box" data-date="1">1<br>Tue</div> 
+            </div> 
+            <div id="theater-list"></div> 
+        </div> 
+        <script> 
+            const movie = { 
+                "30": [ 
+                    { name: "Hollywood-Bollywood Theaters", location: "Lakshmipuram, Guntur", times: 
+["11:45 AM", "02:45 PM"] }, 
+                    { name: "Mythri Cinemas Phoenix Mall", location: "Barco Flagship, Guntur", times: ["01:30 
+PM", "04:00 PM"] }, 
+                    { name: "Platenos Cinemas Dolby Atoms 4k", location: "Barco Projection, Guntur", times: 
+["03:30 PM", "07:00 PM"] } 
+                ], 
+                "31": [ 
+                    { name: "Mythri Cinemas Phoenix Mall", location: "Barco Flagship, Guntur", times: ["01:30 
+PM", "04:00 PM"] }, 
+                    { name: "Platenos Cinemas Dolby Atoms 4k", location: "Barco Projection, Guntur", times: 
+["03:30 PM", "07:00 PM"] }, 
+                    { name: "Cine Prime Cinema", location: "Srinivasarao Pet, Guntur", times: ["2:30 PM", 
+"07:00 PM", "10:00 PM"] } 
+                ], 
+                "1": [ 
+                    { name: "Hollywood-Bollywood Theaters", location: "Lakshmipuram, Guntur", times: 
+["11:45 AM", "03:45 PM"] }, 
+                    { name: "Mythri Cinemas Phoenix Mall", location: "Barco Flagship, Guntur", times: ["01:30 
+PM", "04:00 PM"] } 
+                ] 
+            }; 
+            function updateTheaters(selecteddate) { 
+                const theaterlist = document.getElementById("theater-list"); 
+                let theaters = movie[selecteddate] || []; 
+                if (theaters.length === 0) { 
+                    theaterlist.innerHTML = "<p style='text-align:center;'> No shows available for this 
+date.</p>"; 
+                    return; 
+                } 
+                let theaterHTML = ""; 
+                for (let i = 0; i < theaters.length; i++) { 
+                    let theater = theaters[i]; 
+                    let showtimesHTML = theaters[i].times.map(time => 
+                        `<button class="showtime-btn" onclick="selectShowtime('${selecteddate}', 
+'${theater.name}', '${time}', this)">${time}</button>` 
+                    ).join(""); 
+                    theaterHTML += ` 
+                        <div class="theater-container"> 
+                            <div class="theater-name">${theater.name}</div> 
+                            <div class="location">${theater.location}</div> 
+                            <div class="showtimes">${showtimesHTML}</div> 
+                        </div> 
+                    `; 
+                } 
+                theaterlist.innerHTML = theaterHTML; 
+            } 
+            function selectShowtime(date, theater, time, btn) { 
+                let buttons = document.getElementsByClassName("showtime-btn"); 
+                for (let i = 0; i < buttons.length; i++) { 
+                    buttons[i].classList.remove("selected"); 
+                } 
+                btn.classList.add("selected"); 
+                window.location.href = `seat.php?date=${date}&theater=${theater}&time=${time}`; 
+            } 
+            let dateBoxes = document.querySelectorAll('.date-box'); 
+            for (let i = 0; i < dateBoxes.length; i++) { 
+                dateBoxes[i].addEventListener('click', function() { 
+                    for (let j = 0; j < dateBoxes.length; j++) { 
+                        dateBoxes[j].classList.remove('selected'); 
+                    } 
+                    this.classList.add('selected'); 
+                    updateTheaters(this.getAttribute("data-date")); 
+                }); 
+            } 
+            updateTheaters("30"); 
+        </script> 
+    </body> 
+</html> 
